# bebop

./: .gitignore  README.md  cli.py  pyproject.toml
bebop/: models.py  token.py
bebop/cli/: config.py  context.py  helpers.py  main.py  render.py
bebop/cli/calendar/: main.py  models.py  render.py
tests/unit/: test_token.py
tests/unit/cli/: conftest.py  test_context.py
