[tool.poetry]
name = "bebop"
version = "0.8.0"
description = "Simple Kanban CLI"
authors = ["spike <alejandrotmm96@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
bebop = "bebop.cli.main:app"

[tool.poetry.dependencies]
python = "^3.11"
typer = {extras = ["all"], version = "^0.9.0"}
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
flake8 = "^7.0.0"
flake8-pyproject = "^1.2.3"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.2"

[tool.black]
line-length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
exclude = [
    # No need to traverse our git directory
    '.git',
    # Cache
    '__pycache__',
    # Virtual Environments
    'env',
    'test_env',
]
per-file-ignores = [
    # Imported but unused
    '__init__.py: F401'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
